# rust-windows-macro-test

./: Cargo.toml  README.md
src/: keys.json  main.rs
src/macros/: 1-2.json  1.json  2.json  3.json  4.json  5.json
