[package]
name = "rust-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [ "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse","Win32_Graphics_Direct2D" ] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.48"